--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,13 @@ a {
   line-height: 21px;
   border: 2px solid #FFFFFF;
   background-color: transparent;
+  color: var(--basic-white);
 
 }
 
-.button-form:hover,
-.button-form:focus,
-.button-form:active {
+.button-form:hover {
   background-color: var(--basic-white);
+  color: var(--basic-black);
 }
 
 .button-more {
@@ -216,14 +216,14 @@ a {
   background-color: var(--special-brown-neutral);
 }
 
-.button-info {
+.button-book {
   font-weight: normal;
   color: var(--basic-white);
   background-color: var(--basic-brown);
 }
 
-.button-info:hover,
-.button-info:focus {
+.button-book:hover,
+.button-book:focus {
   background-color: var(--special-brown-light);
 }
 
@@ -255,8 +255,7 @@ a {
 .main-footer {
   font-size: 21px;
   line-height: 26px;
-  background-color: var(--basic-white);
-  opacity: 0.5;
+  background-color: rgb(255, 255, 255, 0.5);
 }
 .footer-social {
   list-style: none;
@@ -278,7 +277,88 @@ a {
   color: var(--basic-black);
 }
 
+/* Catalog */
+
+.form {
+  background-color: var(--basic-grey);
+  background-image: url(/Users/borntosleep/Documents/GitHub/1584633-sedona-31/img/catalog/backgroundcatalog.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  color: var(--basic-white);
+  font-weight: normal;
+}
 
 
+.form-item {
+  font-size: 16px;
+  line-height: 21px;
 
+}
+
+.form-content {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.cost-content input {
+  font: inherit;
+  background-color: transparent;
+  border: 2px solid #FFFFFF;
+}
+
+.cost-content input:focus {
+  border-color: var(--basic-blue);
+}
+
+
+.sort-list {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
+}
+
+.sort-item {
+  list-style: none;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: normal;
+  color: var(--basic-black);
+}
+
+.sort-item:hover {
+  color: var(--basic-blue);
+}
+
+.arrow-down {
+  list-style: none;
+}
+
+.arrow-up {
+  list-style: none;
+}
+
+.hotels h2 {
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.hotels-item {
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: normal;
+}
+
+.rate {
+  width: 110px;
+  height: 27px;
+  font-size: 14px;
+  text-align: center;
+  font-weight: normal;
+  background-color: var(--special-grey-rate);
+}
+
+.this-page {
+  color: var(--basic-brown);
+
+}
 
