--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,27 @@ a {
   line-height: 26px;
   color: var(--basic-black);
   background-color: transparent;
+  display: grid;
+  justify-content: stretch;
 }
 
 .main-navigation-wrapper {
   background-color: var(--basic-white);
+  display: grid;
+  background-color: var(--basic-white);
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
 
 }
 
 .site-navigation {
   list-style: none;
+  outline: 5px solid rgba(0, 255, 255, 0.3);
+  outline-offset: -5px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation-current a:not([href]) {
@@ -91,6 +103,8 @@ a {
 
 .main-header-logo {
   text-align: center;
+  outline: 5px solid rgba(255, 0, 0, 0.3);
+  outline-offset: -5px;
 }
 
 
@@ -102,7 +116,13 @@ a {
   text-align: center;
   color: var(--basic-white);
   background-color: var(--basic-blue);
-
+  outline: 5px solid rgba(21, 255, 0, 0.3);
+  display: grid;
+  grid-row: 1/2;
+  justify-content: stretch;
+  padding: 0;
+  margin: 0;
+  outline: 5px solid rgba(0, 0, 0, 0.3);
 }
 
 
@@ -135,7 +155,8 @@ a {
   line-height: 21px;
   text-align: center;
   color: var(--basic-black);
-  ;
+  outline: 5px solid rgba(0, 132, 255, 0.3);
+  margin-top: 20px;
 
 }
 
@@ -148,6 +169,7 @@ a {
   text-align: center;
   background-color: var(--basic-white);
   background-position: top center;
+  padding-top: 30px;
 }
 
 .book-text {
@@ -156,7 +178,8 @@ a {
   line-height: 24px;
   text-align: center;
 }
- /* Buttons*/
+
+/* Buttons*/
 
 .button {
   font: inherit;
@@ -255,10 +278,18 @@ a {
 /* Footer*/
 
 .main-footer {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 10px 10px;
   font-size: 21px;
   line-height: 26px;
   background-color: rgb(255, 255, 255, 0.5);
+  outline: 5px solid rgba(255, 251, 0, 0.87);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
 }
+
 .footer-social {
   list-style: none;
   text-align: center;
@@ -373,3 +404,69 @@ a {
 
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
+}
+
+/* Main header */
+
+.main-header {
+  margin-bottom: 70px;
+  outline: 5px solid rgba(30, 255, 0, 0.3);
+  outline-offset: -5px;
+}
+
+/* Main*/
+
+.features {
+  outline: 5px solid rgba(255, 0, 0, 0.3);
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-content: stretch;
+  padding: 0;
+  margin: 0;
+}
+
+.feature-inner-city {
+  outline: 5px solid rgba(153, 25, 204, 0.3);
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-row: 1/2;
+}
+
+.feature-canyon {
+  outline: 5px solid rgb(55, 207, 207);
+  display: grid;
+  grid-template-columns: 1fr 400px;
+  grid-row: 3/4;
+  background-color: var(--basic-blue);
+  text-align: center;
+  color: var(--basic-white);
+}
+
+.feature-inner-block {
+  outline: 5px solid rgba(255, 0, 255, 0.3);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-row: 2/3;
+}
+
+.feature-other {
+  outline: 5px solid rgba(219, 128, 9, 0.836);
+  display: grid;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
