--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,17 @@ a {
   line-height: 26px;
   color: var(--basic-black);
   background-color: transparent;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
 }
 
 .site-navigation {
   list-style: none;
   outline: 5px solid rgba(0, 255, 255, 0.3);
   outline-offset: -5px;
-  display: ;
+  margin: 0;
+  padding: 0;
 }
 
 .site-navigation-current a:not([href]) {
@@ -332,7 +336,7 @@ a {
   background-color: rgb(255, 255, 255, 0.5);
   outline: 5px solid rgba(255, 251, 0, 0.87);
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 400px 400px 400px;
   grid-row: 5/6;
   text-align: center;
 }
