--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ a {
   display: flex;
   flex-direction: row;
   align-items: stretch;
+  width: 100%;
 }
 
 .site-navigation {
@@ -80,6 +81,8 @@ a {
   outline: 5px solid rgba(255, 0, 0, 0.3);
   outline-offset: -5px;
   justify-self: center;
+  width: 138px;
+  height: 70px;
 }
 
 /* Main */
@@ -254,7 +257,7 @@ a {
   border: 2px solid #FFFFFF;
   background-color: transparent;
   color: var(--basic-white);
-
+  text-align: center;
 }
 
 .button-form:hover {
@@ -265,6 +268,10 @@ a {
 .button-more {
   color: var(--basic-white);
   background-color: var(--basic-blue);
+  margin-bottom: 30px;
+  margin-left: 29px;
+  margin-right: 6px;
+  margin-top: 15.5px;
 }
 
 .button-more:hover,
@@ -296,6 +303,9 @@ a {
   font-weight: normal;
   color: var(--basic-white);
   background-color: var(--basic-brown);
+  margin-bottom: 7px;
+  margin-left: 6px;
+  margin-top: 23.5px;
 }
 
 .button-book:hover,
@@ -372,6 +382,7 @@ a {
   outline: 5px solid rgba(255, 0, 200, 0.712);
   grid-template-columns: 1fr 1fr 1fr;
   width: 1200px;
+  height: 217px;
 }
 
 
@@ -379,6 +390,7 @@ a {
   font-size: 16px;
   line-height: 21px;
   grid-column: 2/4;
+  font-weight: bold;
 }
 
 .form-list {
@@ -386,6 +398,17 @@ a {
   line-height: 21px;
   list-style: none;
   grid-column: 1/2;
+}
+
+.form-fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.cost-content {
+  display: flex;
+
 }
 
 .cost-content input {
@@ -402,17 +425,21 @@ a {
   display: grid;
   outline: 5px solid rgba(111, 0, 255, 0.918);
   grid-template-columns: 1fr 1fr 1fr 1fr;
-
+  margin: 0;
+  padding: 0;
 }
 
 .sort-text {
   font-size: 12px;
   line-height: 18px;
   font-weight: normal;
+  width: 75px;
 }
 
 .sort-list {
   list-style: none;
+  display: flex;
+  justify-content: space-around;
 }
 
 .sort-link {
@@ -421,6 +448,7 @@ a {
   line-height: 18px;
   font-weight: normal;
   color: var(--basic-black);
+  width: 76px;
 }
 
 .sort-link:hover {
@@ -440,12 +468,23 @@ a {
   font-size: 14px;
   line-height: 21px;
   font-weight: normal;
+  margin-bottom: 18.5px;
+  margin-left: 29px;
+  margin-right: 9px;
+  margin-top: 7px;
+  padding: 0;
 }
+
 
 .hotel-item {
   font-size: 14px;
   line-height: 21px;
   font-weight: normal;
+  margin-bottom: 15.5px;
+  margin-left: 9px;
+  margin-right: 583px;
+  margin-top: 7px;
+  width: 96px;
 }
 
 .rate {
@@ -515,4 +554,43 @@ a {
 
 .hotel {
   grid-column: 1/4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 150px;
+  margin-bottom: 30px;
+  margin-left: 73px;
+  margin-right: 73px;
 }
+
+.hotels h2 {
+  margin-bottom: 7px;
+  margin-left: 29px;
+  margin-right: 561px;
+  margin-top: 0;
+}
+
+.hotel-img {
+  width: 135px;
+  height: 90px;
+  margin-top: 30px;
+}
+
+.hotel-info {
+  width: 809px;
+  margin-top: 30px;
+}
+
+.rating {
+  width: 183px;
+}
+
+.hotel-price-from {
+  display: flex;
+  width: 824px;
+}
+
+
+
+
+
