--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,17 @@ a {
 .site-navigation a {
   color: var(--basic-black);
   display: block;
-  padding: 15px 15px;
+  text-align: center;
+
+}
+
+.site-navigation li {
+  width: 20%;
+  padding-top: 15px;
+}
+
+.site-navigation li:nth-child(3) {
+  margin-left: 20%;
 }
 
 .intro {
@@ -110,7 +120,8 @@ a {
   width: 138px;
   height: 70px;
   position: absolute;
-  padding-left: 531px;
+  left: 620px;
+  top: 0;
 }
 
 
@@ -255,6 +266,7 @@ a {
   color: var(--basic-black);
   text-align: center;
   padding-top: 64px;
+  padding-bottom: 82px;
 
 }
 
@@ -262,9 +274,8 @@ a {
   font-size: 21px;
   line-height: 21px;
   font-weight: bold;
-  margin: 0;
-  padding: 31px 165px 25px 165px;
-
+  margin-top: 0;
+  margin-bottom: 25px;
 }
 
 
@@ -273,7 +284,11 @@ a {
   font-weight: normal;
   line-height: 21px;
   margin: 0;
-  padding: 0 73px 0px 73px;
+
+}
+
+.feature-inner-img {
+  margin-bottom: 31px;
 }
 
 .feature-img {
@@ -397,6 +412,8 @@ a {
   vertical-align: middle;
   text-transform: uppercase;
   border: none;
+  font-size: 14px;
+  display: flex;
 }
 
 .link-htmlacademy:hover,
