--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,7 @@ a {
   background-color: transparent;
   color: var(--basic-white);
   text-align: center;
+  margin: 0 auto;
 }
 
 .button-form:hover {
@@ -373,10 +374,12 @@ a {
 }
 
 .button-more {
+  font-size: 14px;
   color: var(--basic-white);
   background-color: var(--basic-blue);
-  margin-right: 6px;
-  height: 27px;
+  height: 24px;
+  width: 110px;
+  padding-top: 3px;
 }
 
 .button-more:hover,
@@ -408,11 +411,12 @@ a {
 }
 
 .button-book {
+  font-size: 14px;
   font-weight: normal;
   color: var(--basic-white);
   background-color: var(--basic-brown);
-  margin-right: 6px;
-  height: 27px;
+  height: 24px;
+  padding-top: 3px;
 }
 
 .button-book:hover,
@@ -428,7 +432,7 @@ a {
   font-weight: normal;
   text-align: center;
   color: var(--basic-black);
-  background-color: var(--basic-white);
+  background-color: rgb(255, 255, 255, 0) ;
   vertical-align: middle;
   text-transform: uppercase;
   border: none;
@@ -457,6 +461,9 @@ a {
   grid-row: 5/6;
   text-align: center;
   padding-bottom: 36px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .footer-social {
@@ -527,6 +534,7 @@ a {
   line-height: 21px;
   grid-column: 2/4;
   font-weight: bold;
+  margin-bottom: 24px;
 }
 
 .form-list {
@@ -535,50 +543,147 @@ a {
   list-style: none;
   grid-column: 1/2;
   padding: 0;
+  margin: 0;
 }
 
 .form-fieldset {
-  margin: 26px auto 32px;
+  margin: 26px auto 0px 0px;
   padding: 0;
   border: none;
+  font-size: 14px;
+}
+
+.form-fieldset:nth-child(1) {
+  margin-left: 72px;
 }
 
 .form-fieldset label {
   position: relative;
-  display: block;
   cursor: pointer;
+}
+
+.form-option {
+  margin-bottom: 25px;
+  margin-left: 40px;
 }
 
 .form-input-checkbox + label::before {
   content: '';
   position: absolute;
-  left: -39px;
-  top: 0;
+  left: -29px;
+  top: -2px;
   width: 23px;
   height: 23px;
-  border: 3px solid #FFFFFF;
-  border-radius: 2px;
+  background-image: url(../img/catalog/checkbox-off.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border-radius: 4px;
 }
 
-.cost-content {
+
+
+.form-input-checkbox:checked + label::after {
+  content: '';
+  position: absolute;
+  left: -29px;
+  top: -2px;
+  width: 23px;
+  height: 23px;
+  background-image: url(../img/catalog/checked.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.range-filter {
+  width: 317px;
+
+}
+
+.range-controls {
+  height: 21px;
+  width: 316px;
+  padding-top: 20px;
+  position: relative;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background-color: var(--basic-grey);
+}
+
+.range-controls .bar {
+  width: 80%;
+  height: 2px;
+  background-color: var(--basic-white);
+}
+
+.range-controls .toggle {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid #FFFFFF;
+  background-color: #ABABAB;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 0;
+}
+
+.range-controls .toggle-max {
+  left: 250px;
+}
+
+.price-controls {
   display: flex;
+  margin: 0;
+  width: 330px;
+  height: 36px;
+  flex-wrap: wrap;
+  position: relative;
 }
 
-.cost-content input {
-  font: inherit;
+.price-controls input {
+  font-family: inherit;
+  font-size: inherit;
   background-color: transparent;
   border: 2px solid #FFFFFF;
+  height: 36px;
+  color: var(--basic-white);
+  text-align: center;
 }
 
-.cost-content input:focus {
+.price-controls input:focus {
   border-color: var(--basic-blue);
+}
+
+.min-price {
+  width: 158px;
+  text-align: center;
+  color: var(--basic-white);
+  display: flex;
+  position: absolute;
+  top: ;
+  left: ;
+}
+
+.max-price {
+  width: 158px;
+  text-align: center;
+  color: var(--basic-white);
+  display: flex;
 }
 
 .sort {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 237px 85px 503px 1fr;
   margin: 0;
   padding: 0;
+  margin-top: 29px;
 }
 
 .sort-text {
@@ -586,13 +691,22 @@ a {
   line-height: 18px;
   font-weight: normal;
   width: 75px;
+  margin: 0;
 }
 
 .sort-list {
   list-style: none;
   display: flex;
   justify-content: space-around;
+  margin: 0;
+  padding: 0;
 }
+
+.sort-list li {
+  margin: 0;
+  padding: 0;
+}
+
 
 .sort-link {
   list-style: none;
@@ -601,14 +715,76 @@ a {
   font-weight: normal;
   color: var(--basic-black);
   width: 76px;
+  border-bottom: 1px dashed #5496BD;
 }
 
 .sort-link:hover {
   color: var(--basic-blue);
 }
 
+.sort-count {
+  margin: 0;
+  margin-left: 73px;
+}
+
 .rating-list {
   list-style: none;
+  margin: 0;
+  position: relative;
+}
+
+.sort-arrow-active::before {
+  content: '';
+  position: absolute;
+  right: 73px;
+  top: 0;
+  width: 11px;
+  height: 10px;
+  background-image: url(../img/catalog/arrowactive.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.sort-arrow::after {
+  content: '';
+  position: absolute;
+  right: 96px;
+  top: 0;
+  width: 11px;
+  height: 10px;
+  background-image: url(../img/catalog/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.rating {
+  width: 110px;
+  position: relative;
+  top: 35px;
+  right: 0;
+}
+
+.stars{
+  position: absolute;
+  right: 0px;
+  top: -70px;
+  width: 75px;
+  height: 17px;
+  background-image: url(../img/catalog/star.svg);
+  background-repeat: repeat;
+  background-position: 0 0;
+}
+
+.star-1 {
+
+}
+
+.star-2 {
+  width: 57px;
+}
+
+.star-3 {
+  width: 37px;
 }
 
 .hotel h2 {
@@ -640,6 +816,8 @@ a {
   text-align: center;
   font-weight: normal;
   background-color: var(--special-grey-rate);
+  padding-top: 5px;
+  margin: 0;
 }
 
 .current-page {
@@ -660,6 +838,7 @@ a {
   width: 1200px;
   justify-self: center;
   margin: 0 auto;
+  position: relative;
 }
 
 /* Main header */
@@ -691,6 +870,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  position: relative;
 }
 
 .hotel {
@@ -704,6 +884,19 @@ a {
   padding-right: 73px;
   padding-top: 30px;
 }
+
+.hotel::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 25px;
+  width: 1200px;
+  height: 1px;
+  background-image: url(../img/catalog/line.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
 
 .hotels h2 {
   margin-bottom: 7px;
@@ -720,11 +913,8 @@ a {
   width: 809px;
 }
 
-.rating {
-  width: 183px;
-}
-
 .hotel-price-from {
   display: grid;
+  grid-template-columns: 116px 1fr;
   width: 258px;
 }
